Modificati groupId e artifactId

--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>it.polimi.ingsw</groupId>
-  <artifactId>progetto</artifactId>
+  <groupId>it.polimi.sw</groupId>
+  <artifactId>GC24</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <name>ProgettoINGSW2</name>
+  <name>ProgettoINGSW</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
