gitignored GC24.iml

--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,5 @@ PSP17.iml
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+GC24.iml
+GC24.iml
