--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,11 @@
             <classifier>mac-aarch64</classifier>
         </dependency>
         <dependency>
+            <groupId>org.controlsfx</groupId>
+            <artifactId>controlsfx</artifactId>
+            <version>11.2.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
             <version>23-ea+18</version>
